# bedrud

./: .dockerignore  .gitignore  DESIGN.md  Dockerfile  MOBILE_FEATURE_PLAN.md  Makefile  README.md  docker-compose.yaml  install.ps1  mkdocs.yml  svelte.config.js
.claude/: settings.local.json
.github/: dependabot.yml
.playwright-mcp/: page-2026-04-27T19-42-05-288Z.yml  page-2026-04-27T19-42-48-138Z.yml  page-2026-04-27T19-50-49-647Z.yml  page-2026-04-27T19-53-00-631Z.yml  page-2026-04-27T19-55-31-391Z.yml  page-2026-04-28T01-19-33-426Z.yml  page-2026-04-28T01-19-50-215Z.yml  page-2026-04-28T01-21-17-567Z.yml  page-2026-04-28T01-24-44-533Z.yml  page-2026-04-28T01-26-48-109Z.yml  page-2026-04-28T01-27-07-529Z.yml  page-2026-04-28T01-39-04-231Z.yml  page-2026-04-28T01-39-28-430Z.yml
apps/desktop/: Cargo.toml
apps/desktop/installer/linux/: bedrud-desktop.spec
apps/desktop/src/: app.rs  main.rs
apps/desktop/src/api/: client.rs  mod.rs
apps/desktop/src/livekit/: tracks.rs
apps/desktop/src/store/: settings.rs
apps/desktop/src/ui/: bridge.rs
apps/desktop/ui/: app.slint  settings.slint
apps/desktop/ui/admin/: user_table.slint
apps/desktop/ui/dashboard/: dashboard.slint  room_card.slint
apps/desktop/ui/meeting/: chat_panel.slint  meeting.slint
backend/: README.md  data.db  go.mod  go.sum
docs/: PASSKEY_IMPLEMENTATION.md  README.md  appliance.md  backend.md  codebase_structure.md  contributing.md  deployment.md  frontend.md  index.md  install.md  makefile.md
server/: .gitignore  config.local.yaml  go.mod  go.sum  livekit.yaml  livekit.yaml.example  (+1 more)
(+606 files in other folders)
