[package]
name = "bedrud-desktop"
version = "0.1.0"
edition = "2021"

[dependencies]
slint = "1"
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.12", features = ["json", "rustls-tls"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
anyhow = "1"
dirs = "5"
toml = "0.8"
keyring = "2"
log = "0.4"
env_logger = "0.11"

[build-dependencies]
slint-build = "1"

[dev-dependencies]
mockito = "1"
tokio-test = "0.4"
tempfile = "3"
